Fixing mis-aligned contact information

--- a/assets/stylesheets/partials/_resume-page.scss
+++ b/assets/stylesheets/partials/_resume-page.scss
@@ -198,8 +198,4 @@
     a[href]:after {
         content: none !important;
     }
-
-    .resume-page-contact {
-        margin-top: -5.0rem;
-    }
 }
